--- a/aboutus.html
+++ b/aboutus.html
@@ -6,6 +6,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <script>
+        function openhomepage() {
+            window.location.href='index.html';
+        }
+    </script>
 </head>
 <body>
     <section class="about">
@@ -50,6 +55,7 @@
                 </div>
             </div>
         </div>
+        <button class="home" onclick="openhomepage()">Return to homepage</button>
     </section>
 </body>
 </html>
