--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1>Choose your food</h1>
             <div class="iconCart">
-                <img src="icon.png">
+                <img src="/images/icon.png">
                 <div class="totalQuantity">0</div>
             </div>
         </header>
