--- a/payment form.html
+++ b/payment form.html
@@ -79,7 +79,7 @@
                 <h3 class="title">Payment</h3>
                 <div class="input-box">
                     <span>Cards accepted :</span>
-                    <img src="cards.jpeg" alt="cards">
+                    <img src="images/cards.jpeg" alt="cards">
                 </div>
                 <div class="input-box">
                     <span>Cardholder Name :</span>
