--- a/register.html
+++ b/register.html
@@ -3,34 +3,26 @@
 <head>
     <title>Register</title>
     <link rel="stylesheet" href="register.css">
-    
+    <script>
+        function openhomepage
+    </script>
 </head>
 <body>
-    <div class="background">
-        <div class="shape"><img src="https://img.freepik.com/premium-vector/food-delivery-calligraphy-hand-lettering-handwritten-logotype-takeaway-service-vector-template-typography-poster-logo-design-banner-flyer-tag-etc_656810-2806.jpg" style="height: 200px;"></div>
-        <div class="shape"><img src="https://th.bing.com/th/id/OIP.IB8GuX3D2m1QO8Kt-4AKAgHaHa?w=1920&h=1920&rs=1&pid=ImgDetMain" style="height: 200px;"></div>
-    </div>
     <form>
         <h3>Register Account</h3>
 
         <label for="username">Username</label>
-        <input type="text" placeholder="Email or Phone" id="username">
+        <input type="text" placeholder="Email or Phone" name="username">
 
         
         <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password">
+        <input type="password" placeholder="Password" name="password_1">
 
-        <label for="email">Email</label>
-        <input type="password" placeholder="Email" id="email">
+        <label for="email">Confirm Password</label>
+        <input type="password" placeholder="Password" name="password_2">
 
         <label for="address1">Address </label>
         <input type="address1" placeholder="Address " id="address1">
-
-        <!--<label for="address2">Address 2</label>
-        <input type="address2" placeholder="Address 2" id="address2">-->
-
-        <!--<label for="postcode">Postcode</label>
-        <input type="postcode" placeholder="Postcode" id="postcode">-->
 
 
         <button>Register</button>
