--- a/aboutus.html
+++ b/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Us Section Design</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="aboutus.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,39 +19,27 @@
                 <h1>About Us</h1>
                 <h5>Food Delivery Services<span>Fast and Convenient</span></h5>
                 <p>At Flash Food Delivery, we take great pride in quickly and conveniently delivering mouthwatering meals to your door. Our staff puts out a lot of effort to make sure you may enjoy the greatest dining experience without having to leave the comforts of your home. We can cater to your needs for breakfast, lunch, dinner, and snacks. Get it now to experience the difference!</p>
+                <div class="socials">
+                    <h5>Come find us here</h5>
+                    <div class="social-icons">
+                        <a href="https://www.instagram.com"><img src="socialimage/ig.jpeg" alt="Instagram"></a>
+                        <a href="https://www.facebook.com"><img src="socialimage/facebook.jpeg" alt="Facebook"></a>
+                        <a href="https://wa.me/1234567890"><img src="socialimage/WhatsApp.jpeg" alt="WhatsApp"></a>
+                    </div>
+                </div>
             </div>
             <div class="images-grid">
                 <div class="image-container">
-                    <img src="orang_handsome/laowang2.jpg" alt="Laowang" class="small-image">
-                    <div class="social-icons">
-                        <a href="https://www.instagram.com"><img src="socialimage/ig.jpeg" alt="Instagram"></a>
-                        <a href="https://www.facebook.com"><img src="socialimage/facebook.jpeg" alt="Facebook"></a>
-                        <a href="https://wa.me/1234567890"><img src="socialimage/WhatsApp.jpeg" alt="WhatsApp"></a>
-                    </div>
+                    <img src="images/wong kok seng.jpg" alt="Laowang" class="small-image">
                 </div>
                 <div class="image-container">
-                    <img src="orang_handsome/weige.jpg" alt="Weige" class="small-image">
-                    <div class="social-icons">
-                        <a href="https://www.instagram.com"><img src="socialimage/ig.jpeg" alt="Instagram"></a>
-                        <a href="https://www.facebook.com"><img src="socialimage/facebook.jpeg" alt="Facebook"></a>
-                        <a href="https://wa.me/1234567890"><img src="socialimage/WhatsApp.jpeg" alt="WhatsApp"></a>
-                    </div>
+                    <img src="images/Ng dickwe.jpg" alt="Weige" class="small-image">
                 </div>
                 <div class="image-container">
-                    <img src="orang_handsome/dandan.jpg" alt="Dandan" class="small-image">
-                    <div class="social-icons">
-                        <a href="https://www.instagram.com"><img src="socialimage/ig.jpeg" alt="Instagram"></a>
-                        <a href="https://www.facebook.com"><img src="socialimage/facebook.jpeg" alt="Facebook"></a>
-                        <a href="https://wa.me/1234567890"><img src="socialimage/WhatsApp.jpeg" alt="WhatsApp"></a>
-                    </div>
+                    <img src="images/Brandon.jpg" alt="Dandan" class="small-image">
                 </div>
                 <div class="image-container">
-                    <img src="orang_handsome/hansenboy.jpg" alt="Hansen Boy" class="small-image">
-                    <div class="social-icons">
-                        <a href="https://www.instagram.com"><img src="socialimage/ig.jpeg" alt="Instagram"></a>
-                        <a href="https://www.facebook.com"><img src="socialimage/facebook.jpeg" alt="Facebook"></a>
-                        <a href="https://wa.me/1234567890"><img src="socialimage/WhatsApp.jpeg" alt="WhatsApp"></a>
-                    </div>
+                    <img src="images/yee han sen.jpg" alt="Hansen Boy" class="small-image">
                 </div>
             </div>
         </div>
