--- a/MainPage.html
+++ b/MainPage.html
@@ -18,10 +18,10 @@
 <header>
     <div class="navbar">
         <ul class="links left-links">
-            <li><a href="aboutus.html">About us</a></li>
+            <li><a href="About Us.html">About us</a></li>
         </ul>
         <ul class="links right-links">
-            <li><a href="contactus.html">Contact us</a></li>
+            <li><a href="Contact Us.html">Contact us</a></li>
         </ul>
     </div>
 </header>
