--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             <a href="Contact Us.php">Contact Us</a>
             <div class="dropdown">
                 <button class="dropbtn">
-                    <!-- Replace the src with the path to your profile image -->
-                    <img src="path/to/default-profile-picture.png" alt="Profile Picture">
+                    <img src="images/default profile.png" alt="Profile Picture">
                     <?php echo $_SESSION['username']; ?>
                 </button>
                 <div class="dropdown-content">
