--- a/product details.html
+++ b/product details.html
@@ -11,13 +11,13 @@
     <section class="main-wrap">
         <div class="product">
             <div class="image">
-                <img src="/images/asam laksa.webp" id="productimg" alt="">
+                <img src="/images/asam laksa.webp" id="productImg" alt="">
             </div>
             <div class="product-details">
                 <div class="details">
                     <h2>Asam Laksa</h2>
                     <h3>RM5.30</h3>
-                    <p>A Peranakan noodle dish,paired with sour fish and tamarind-based broth,asam laksa is one of the most iconic Penang dishes.</p>
+                    <p>A Peranakan noodle dish, paired with sour fish and tamarind-based broth, asam laksa is one of the most iconic Penang dishes.</p>
                 </div>
                 <div class="quantity">
                     <div class="select-quantity">
@@ -26,11 +26,10 @@
                     </div>
                 </div>
                 <div class="sub-btn">
-                    <button class="submit">Add to cart</button>
+                    <button class="btn">Add to cart</button>
                 </div>
             </div>
         </div>
-
     </section>
 
     <script src="product details.js"></script>
