--- a/About Us default.html
+++ b/About Us default.html
@@ -1,11 +1,3 @@
-<?php 
-  session_start(); 
-
-  if (!isset($_SESSION['username'])) {
-  	$_SESSION['msg'] = "You must log in first";
-  	header('location: login.php');
-  }
-?>
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <script>
         function openhomepage() {
-            window.location.href='index.php';
+            window.location.href='mainpage.html';
         }
     </script>
 </head>
@@ -24,22 +16,11 @@
     <div class="navbar">
         <div class="navbar-brand">Flash Food Delivery</div>
         <div class="navbar-links">
-            <a href="index.php">Home Page</a>
-            <a href="About Us.php">About Us</a>
-            <a href="Contact Us.php">Contact Us</a>
-            <div class="dropdown">
-                <button class="dropbtn">
-                    <img src="images/default profile.png" alt="Profile Picture">
-                    <?php echo $_SESSION['username']; ?>
-                </button>
-                <div class="dropdown-content">
-                    <a href="profile.php">View Profile</a>
-                    <form method="POST" action="logout.php" style="margin: 0;">
-                        <input type="hidden" name="action" value="logout">
-                        <button type="submit" class="logout-button">Logout</button>
-                    </form>
-                </div>
-            </div>
+            <a href="mainpage.html">Home Page</a>
+            <a href="About Us default.html">About Us</a>
+            <a href="Contact Us default.html">Contact Us</a>
+            <a href="register.php" style="text-decoration: underline; font-size: 25px;">Register</a>
+            <a href="login.php" style="text-decoration: underline; font-size: 25px;">login</a>
         </div>
     </div>
     <section class="about">
