--- a/MainPage.html
+++ b/MainPage.html
@@ -17,12 +17,12 @@
 <body>
 <header>
     <div class="navbar">
-        <ul class="links left-links">
-            <li><a href="About Us.html">About us</a></li>
-        </ul>
-        <ul class="links right-links">
-            <li><a href="Contact Us.html">Contact us</a></li>
-        </ul>
+        <p class="links left-links">
+            <a href="About Us default.html"><b>About us</b></a>
+        </p>
+        <p class="links right-links">
+            <a href="Contact Us default.html"><b>Contact us</b></a>
+        </p>
     </div>
 </header>
 
