--- a/product details.html
+++ b/product details.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="product details style.css">
 </head>
 <body>
+    <div class="navbar">
+        <div class="navbar-brand">Flash Food Delivery</div>
+        <div class="navbar-links">
+            <a href="index.php">Home Page</a>
+            <a href="About Us.php">About Us</a>
+            <a href="Contact Us.php">Contact Us</a>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <img src="images/default profile.png" alt="Profile Picture">
+                    <?php echo $_SESSION['username']; ?>
+                </button>
+                <div class="dropdown-content">
+                    <a href="profile.php">View Profile</a>
+                    <form method="POST" action="logout.php" style="margin: 0;">
+                        <input type="hidden" name="action" value="logout">
+                        <button type="submit" class="logout-button">Logout</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <header>
+        <div class="iconCart">
+            <img src="/images/icon.png">
+            <div class="totalQuantity">0</div>
+        </div>
+    </header>
     <section class="main-wrap">
         <div class="product">
             <div class="image">
@@ -26,7 +53,30 @@
                     </div>
                 </div>
                 <div class="sub-btn">
-                    <button class="btn">Add to cart</button>
+                    <button class="submit">Add to cart</button>
+                </div>
+            </div>
+        </div>
+        <div class="cart">
+            <h2>CART</h2>
+            <div class="listCart">
+                <div class="item">
+                    <img src="/images/banana leaf rice.jpg">
+                    <div class="content">
+                        <div class="name">Banana Leaf Rice</div>
+                        <div class="price">RM5.20</div>
+                    </div>
+                    <div class="quantity">
+                        <button>-</button>
+                        <span class="value">3</span>
+                        <button>+</button>
+                    </div>
+                </div>
+            </div>
+            <div class="buttons">
+                <div class="close">CLOSE</div>
+                <div class="checkout">
+                    <a href="checkout.php">CHECKOUT</a>
                 </div>
             </div>
         </div>
@@ -35,3 +85,4 @@
     <script src="product details.js"></script>
 </body>
 </html>
+
