--- a/product details.html
+++ b/product details.html
@@ -38,40 +38,29 @@
     <section class="main-wrap">
         <div class="product">
             <div class="image">
-                <img src="/images/asam laksa.webp" id="productImg" alt="">
+                <img src="" id="productImg" alt="">
             </div>
             <div class="product-details">
                 <div class="details">
-                    <h2>Asam Laksa</h2>
-                    <h3>RM5.30</h3>
-                    <p>A Peranakan noodle dish, paired with sour fish and tamarind-based broth, asam laksa is one of the most iconic Penang dishes.</p>
+                    <h2 id="productName"></h2>
+                    <h3 id="productPrice"></h3>
+                    <p id="productDescription"></p>
                 </div>
                 <div class="quantity">
                     <div class="select-quantity">
                         <h3>Quantity:</h3>
-                        <input type="number" name="quantity" value="1">
+                        <input type="number" name="quantity" id="quantityInput" value="1">
                     </div>
                 </div>
                 <div class="sub-btn">
-                    <button class="submit">Add to cart</button>
+                    <button class="submit" onclick="addToCart()">Add to Cart</button>
                 </div>
             </div>
         </div>
         <div class="cart">
             <h2>CART</h2>
             <div class="listCart">
-                <div class="item">
-                    <img src="/images/banana leaf rice.jpg">
-                    <div class="content">
-                        <div class="name">Banana Leaf Rice</div>
-                        <div class="price">RM5.20</div>
-                    </div>
-                    <div class="quantity">
-                        <button>-</button>
-                        <span class="value">3</span>
-                        <button>+</button>
-                    </div>
-                </div>
+                <!-- Cart items will be dynamically added here -->
             </div>
             <div class="buttons">
                 <div class="close">CLOSE</div>
