--- a/admin.html
+++ b/admin.html
@@ -1,3 +1,11 @@
+<?php 
+  session_start(); 
+
+  if (!isset($_SESSION['admin'])) {
+  	$_SESSION['msg'] = "You must log in first";
+  	header('location: mainpage.html');
+  }
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
