--- a/admin.html
+++ b/admin.html
@@ -1,8 +1,6 @@
 <?php 
   session_start(); 
-
   if (!isset($_SESSION['admin'])) {
-  	$_SESSION['msg'] = "You must log in first";
   	header('location: mainpage.html');
   }
 ?>
@@ -12,117 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page - Flash Food Delivery</title>
-    <style>
-        /* Your CSS styles here */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Times New Roman', Times, serif;
-        }
-
-        body {
-            height: 100vh;
-            background-color: #f3f4f6;
-        }
-
-        header {
-            position: relative;
-            padding: 2rem;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            text-align: center; /* Center text within header */
-        }
-
-        .navbar {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .navbar .logo a {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: black;
-            text-decoration: none;
-        }
-
-        .navbar ul {
-            display: flex;
-            list-style: none;
-            padding: 0;
-        }
-
-        .navbar ul li {
-            margin-right: 20px;
-        }
-
-        .navbar ul li:last-child {
-            margin-right: 0;
-            text-decoration: underline; /* Add underline */
-        }
-
-        .navbar ul li:last-child a {
-            color: black; /* Restore original color */
-        }
-
-        .navbar ul li a {
-            text-decoration: none;
-            color: black;
-            font-size: 1.2rem;
-            transition: color 0.3s ease;
-        }
-
-        .navbar ul li a:hover {
-            color: orange;
-        }
-
-        main {
-            padding: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-            text-align: center; /* Center text within main */
-        }
-
-        h1 {
-            margin-bottom: 1.5rem;
-            font-size: 2.5rem; /* Increased font size */
-            font-family: 'Times New Roman', Times, serif; /* Changed font family */
-        }
-
-        .admin-content {
-            background-color: #fff;
-            padding: 2rem;
-            border-radius: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            font-family: 'Times New Roman', Times, serif; /* Changed font family */
-        }
-
-        .admin-content h2 {
-            margin-bottom: 1rem;
-        }
-
-        .admin-content p {
-            margin-bottom: 1rem;
-        }
-
-        .admin-content button {
-            background-color: orange;
-            color: white;
-            padding: 0.5rem 1rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .admin-content button:hover {
-            background-color: #ff7f0e;
-        }
-    </style>
+    <link rel="stylesheet" href="admin.css"/>
 </head>
 <body>
 <header>
@@ -132,9 +20,22 @@
         </div>
         <ul>
             <li><a href="#">Orders</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="view_products.html">Products</a></li>
             <li><a href="#">Customers</a></li>
-            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Staff</a></li>
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <img src="images/default profile.png" alt="Profile Picture">
+                    <?php echo $_SESSION['admin']; ?>
+                </button>
+                <div class="dropdown-content">
+                    
+                    <form method="POST" action="logout.php" style="margin: 0;">
+                        <input type="hidden" name="action" value="logout">
+                        <button type="submit" class="logout-button">Logout</button>
+                    </form>
+                </div>
+            </div>
         </ul>
     </div>
 </header>
@@ -142,7 +43,7 @@
 <main>
     <h1>Welcome to the Admin Panel</h1>
     <div class="admin-content">
-        <p>Here, you can manage your orders, products, customers, and log out.</p>
+        <p>Here, you can manage your orders, products and accounts.</p>
     </div>
 </main>
 
