--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 <h2>CoPilot / Black / Automatic</h2>
                 <div class="price">RM5.30</div>
                 <button>Add To Cart</button>
+                <a href="product details.html">View Product Details</a>
             </div>
         </div>
     </div>
