--- a/About Us default.html
+++ b/About Us default.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <script>
         function openhomepage() {
-            window.location.href='mainpage.html';
+            window.location.href='index.html';
         }
     </script>
 </head>
@@ -16,7 +16,7 @@
     <div class="navbar">
         <div class="navbar-brand">Flash Food Delivery</div>
         <div class="navbar-links">
-            <a href="mainpage.html">Home Page</a>
+            <a href="index.html">Home Page</a>
             <a href="About Us default.html">About Us</a>
             <a href="Contact Us default.html">Contact Us</a>
             <a href="register.php" style="text-decoration: underline; font-size: 25px;">Register</a>
